# Scientific-Computing-Cpp

./: README.md
AdamOptimizationMethod/: Adam.cpp  Adam.h  CMakeLists.txt  Test1.h  Test2.h  Test3.h  Test4.h  main.cpp
ArtificialNeuralNetwork/: CMakeLists.txt  activation_function.h  layer.cpp  layer.h  neuron.cpp  nn_model.cpp  nn_model.h  re_lu.cpp  re_lu.h  sigmoid.cpp  sigmoid.h  tanh_af.cpp  tanh_af.h
ParallelComputing_MPI/: CMakeLists.txt  matrix_assemble.cpp  matrix_diff.cpp  matrix_split.cpp
